# VAUV

./: .gitignore  .gitmodules  README.md
Software/vortex_ws/src/battery_mangement_unit/: CMakeLists.txt  README.md  package.xml
Software/vortex_ws/src/custom_ros_interfaces/: CMakeLists.txt  README.md  RcMsg.msg  SensorStatus.msg  ServoMsg.msg  StatePredictionVector.msg  StateVector.msg  package.xml
Software/vortex_ws/src/custom_ros_interfaces/msg/: Attitude.msg  Bar30.msg  DMPC.msg  DVL.msg  Depth.msg  Leak.msg  MMPC.msg  NavController.msg  Object.msg  ObjectList.msg  RcMsg.msg  ServoMsg.msg  SetLed.msg  SetThrustChannels.msg
Software/vortex_ws/src/custom_ros_interfaces/px4_interfaces/: CMakeLists.txt  package.xml
Software/vortex_ws/src/custom_ros_interfaces/srv/: Arm.srv  Heartbeat.srv  PWM.srv  SetMode.srv  SetThruster.srv
Software/vortex_ws/src/localization/: CMakeLists.txt  README.md  package.xml
Software/vortex_ws/src/localization/include/localization/: sensors_transform.hpp
Software/vortex_ws/src/localization/launch/: sensors_transform.launch.py
Software/vortex_ws/src/localization/src/: sensors_transform.cpp
Software/vortex_ws/src/motion_control/: CMakeLists.txt  README.md  package.xml
Software/vortex_ws/src/motion_control/control_allocation/: CMakeLists.txt  README.md  package.xml
Software/vortex_ws/src/motion_control/control_allocation/include/control_allocation/: allocation_node.hpp
Software/vortex_ws/src/motion_control/control_allocation/launch/: control_allocation.launch.py
Software/vortex_ws/src/motion_control/control_allocation/params/: thrusters.yaml
Software/vortex_ws/src/motion_control/control_allocation/src/: allocation_node.cpp
Software/vortex_ws/src/motion_control/docs/control/mpc/: mpc.md
Software/vortex_ws/src/motion_control/docs/control_allocation/: control_allocation.md
Software/vortex_ws/src/motion_control/docs/model/: model.md
Software/vortex_ws/src/motion_control/include/motion_control/: controller_node.hpp  eigen_headers.hpp  guidance.hpp  ipopt_mpc_problem.hpp  lqr.hpp  mpc.hpp  plant.hpp  thrust_allocation.hpp
Software/vortex_ws/src/motion_control/launch/: mpc.launch.py
Software/vortex_ws/src/motion_control/params/: config.yaml
Software/vortex_ws/src/motion_control/src/: controller_node.cpp  guidance.cpp  lqr.cpp  mpc.cpp  plant.cpp
Software/vortex_ws/src/motion_control/trajectory_tracking/: README.md
Software/vortex_ws/src/motion_control/trajectory_tracking/depth_mpc/: README.md  package.xml
Software/vortex_ws/src/motion_control/trajectory_tracking/depth_mpc/launch/: depth.launch.py
Software/vortex_ws/src/motion_control/trajectory_tracking/maneuver_mpc/: CMakeLists.txt  package.xml
Software/vortex_ws/src/motion_control/trajectory_tracking/maneuver_mpc/src/: controller_node.cpp
Software/vortex_ws/src/motion_control/trajectory_tracking/mpc_guidance/: README.md  package.xml
Software/vortex_ws/src/motion_control/trajectory_tracking/mpc_guidance/params/: guidance.yaml
Software/vortex_ws/src/motion_control/trajectory_tracking_lqr/: CMakeLists.txt  README.md  package.xml
Software/vortex_ws/src/motion_control/trajectory_tracking_lqr/launch/: lqr.launch.py
Software/vortex_ws/src/motion_control/trajectory_tracking_lqr/params/: config.yaml
Software/vortex_ws/src/motion_control/trajectory_tracking_lqr/src/: controller_node.cpp  los_steering.cpp  lqr.cpp  plant.cpp  trajectory.cpp
Software/vortex_ws/src/motion_control/trajectory_tracking_mpc/: CMakeLists.txt  README.md  package.xml
Software/vortex_ws/src/motion_control/trajectory_tracking_mpc/depth_mpc/: CMakeLists.txt  package.xml
Software/vortex_ws/src/motion_control/trajectory_tracking_mpc/launch/: mpc.launch.py
Software/vortex_ws/src/motion_control/trajectory_tracking_mpc/maneuver_mpc/: README.md  package.xml
Software/vortex_ws/src/motion_control/trajectory_tracking_mpc/mpc_guidance/: CMakeLists.txt  package.xml
Software/vortex_ws/src/motion_control/trajectory_tracking_mpc/params/: config.yaml  depth.yaml  guidance.yaml  maneuver.yaml
Software/vortex_ws/src/motion_control/trajectory_tracking_mpc/src/: controller_node.cpp  depth_mpc.cpp  depth_node.cpp  guidance_node.cpp  los_steering.cpp  maneuver_mpc.cpp  maneuver_node.cpp  mpc.cpp  plant.cpp  thrust_allocation.cpp  thrust_merger_node.cpp
Software/vortex_ws/src/motion_planning/: CMakeLists.txt  README.md  package.xml
Software/vortex_ws/src/motion_planning/launch/: local_planning.launch.py
Software/vortex_ws/src/motion_planning/params/: local_planning.yaml
Software/vortex_ws/src/motion_planning/px4_py/: package.xml  setup.cfg  setup.py
Software/vortex_ws/src/motion_planning/px4_py/px4_py/: parameter.txt
Software/vortex_ws/src/motion_planning/src/local_planning/: local_planning_node.cpp  optimal_trajectory.cpp  sinusodial_trajectory.cpp  steering.cpp
Software/vortex_ws/src/motion_planning_py/: package.xml  setup.cfg  setup.py
Software/vortex_ws/src/motion_planning_py/motion_planning_py/: control_px4.py  px4_getinfo.py
Software/vortex_ws/src/sensors/: CMakeLists.txt  README.md  package.xml
Software/vortex_ws/src/sensors/include/VDVL/: executor.hpp  executor.hpp.unc-backup.md5~  executor.hpp.unc-backup~  serial_node.hpp  serial_node.hpp.unc-backup.md5~  serial_node.hpp.unc-backup~  serial_port.hpp  serial_port.hpp.unc-backup.md5~  serial_port.hpp.unc-backup~
Software/vortex_ws/src/sensors/include/dvl_companion/: linux_serial.hpp  parser.hpp
Software/vortex_ws/src/sensors/src/: dvl_serial.cpp  dvl_serial_parser.cpp  linux_serial.cpp
Software/vortex_ws/src/sensors/src/A50-DVL/: dvl_serial_pub.cpp
Software/vortex_ws/src/sensors/src/A50-DVL/VDVL/: executor.cpp  (+2 more)
Software/vortex_ws/src/sensors/src/DVL/: serial_pub.cpp  serial_pub.cpp.unc-backup.md5~  serial_pub.cpp.unc-backup~  serial_sub.cpp.unc-backup.md5~  serial_sub.cpp.unc-backup~
Software/vortex_ws/src/vision/: README.md  package.xml  setup.py
Software/vortex_ws/src/vision/dependencies/: getRos2.sh  installSystem.sh
Software/vortex_ws/src/vision/vision/: __init__.py  image_enhancement_node.py
(+288 files in other folders)
