<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>battery_mangement_unit</name>
  <version>0.0.0</version>
  <description>This ROs package for battery mangement(support C++ and python)</description>
  <maintainer email="info@vortex-co.com">vortex</maintainer>
  <license>GNU</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
