<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_ros_interfaces</name>
  <version>0.0.0</version>
  <description>Custom ROS interfaces package</description>
  <maintainer email="info@vortex-co.com">vortex-co</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
