<?xml version="1.0"?>
<package format="3">
  <name>localization</name>
  <version>0.0.0</version>
  <description>Pingers localization package</description>
  <maintainer email="info@vortex-co.com">vortex</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
