<?xml version="1.0"?>
<package format="3">
  <name>motion_control</name>
  <version>0.0.0</version>
  <description> AUV tracking control software using MPC</description>
  <maintainer email="mohameddbardana@gmail.com">mohamedd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
