<?xml version="1.0"?>
<package format="3">
  <name>motion_planning</name>
  <version>0.0.0</version>
  <description>motion planning package</description>
  <maintainer email="info@vortex-co.com">vortex-co</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
