<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision</name>
  <version>0.0.0</version>
  <description> vision package </description>
  <maintainer email="info@vortex-co.com">vortex-co</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE</license>



  <depend>cv2</depend>
  <depend>numpy</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
